// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should apply background prop if provided 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 1.5rem 1rem 1.5rem 2rem;
  gap: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: gray;
  box-shadow: 0 1px 5px 0 #D3D4DD,0 2px 1px -1px #D3D4DD;
  z-index: 1;
}

<div>
  <div
    class="emotion-0"
  >
    Header with background
  </div>
</div>
`;

exports[`should apply external styles prop 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 1.5rem 1rem 1.5rem 2rem;
  gap: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  box-shadow: 0 1px 5px 0 #D3D4DD,0 2px 1px -1px #D3D4DD;
  z-index: 1;
  color: blue;
}

<div>
  <div
    class="emotion-0"
  >
    Header with style
  </div>
</div>
`;

exports[`should render children when hasHeader is true 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 1.5rem 1rem 1.5rem 2rem;
  gap: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  box-shadow: 0 1px 5px 0 #D3D4DD,0 2px 1px -1px #D3D4DD;
  z-index: 1;
}

<div>
  <div
    class="emotion-0"
  >
    Title
  </div>
</div>
`;
